--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"lucide-react": "^0.468.0",
+		"marked": "^15.0.7",
 		"next": "15.0.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
