--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"class-variance-authority": "^0.7.1",
 		"lucide-react": "^0.468.0",
 		"marked": "^15.0.7",
+		"motion": "^12.12.1",
 		"next": "15.0.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -38,6 +39,7 @@
 		"postcss": "^8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
+		"tailwind-scrollbar": "^4.0.2",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
