--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
 		"@iconify/react": "^5.1.0",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -18,6 +19,7 @@
 		"aos": "^2.3.4",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
+		"highlight.js": "^11.11.1",
 		"lucide-react": "^0.468.0",
 		"marked": "^15.0.7",
 		"motion": "^12.12.1",
@@ -26,8 +28,10 @@
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.0",
 		"react-hot-toast": "^2.4.1",
+		"react-syntax-highlighter": "^15.6.1",
 		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.25.42"
 	},
 	"devDependencies": {
 		"@types/aos": "^3.0.7",
