--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "chat-llama",
+	"name": "superminichat",
 	"author": "Gabriel Azevedo",
-	"version": "0.1.0",
+	"version": "1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
